--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -1,12 +1,9 @@
-name: Sync Notion to JSON
+name: Sync Notion to CSV
 
 on:
   schedule:
     - cron: "0 * * * *"   # 每小時整點執行
   workflow_dispatch: {}   # 手動觸發
-
-permissions:
-  contents: write
 
 jobs:
   sync:
@@ -21,25 +18,28 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Run Notion fetch script
         env:
           NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: |
-          echo "NOTION_SECRET length: ${#NOTION_SECRET}"
-          echo "NOTION_DATABASE_ID length: ${#NOTION_DATABASE_ID}"
-          node scripts/fetch-notion.js
-
+        run: node scripts/fetch-notion.js
 
       - name: Commit and push if changed
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          # 🔥 追蹤新產生的 fishorder.csv（沒有這行就會再度失敗）
+          git add fishorder.csv || true
+
+          # 🔥 若真的有變更，才提交並推送
           if [ -n "$(git status --porcelain)" ]; then
             echo "Changes detected. Committing..."
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add data/notion-orders.json
-            git commit -m "Update Notion data"
+            git commit -m "Update fishorder.csv from Notion"
             git push
           else
-            echo "No changes."
+            echo "No changes found."
           fi
